--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,47 +1,46 @@
-# 1 워크플로의 이름 지정
-name: CI/CD
+name: Java CI with Gradle
 
-# 2 워크플로가 시작될 조건 지정
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+
+env:
+  S3_BUCKET_NAME: dreamconsumer
 
 jobs:
   build:
-    runs-on: windows-latest # 3 실행 환경 지정
-    #4 실행스텝지정
+
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/setup-java@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'zulu'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
+          distribution: 'temurin'
       - name: Build with Gradle
-        run: ./gradlew clean build
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
 
-      #2 현재시간가져오기
-      - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
-        id: current-time
+      # build한 후 프로젝트를 압축합니다.
+      - name: Make zip file
+        run: zip -r ./practice-deploy.zip .
+        shell: bash
+
+      # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
+      # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          format: YYYY-MM-DDTHH-mm-ss
-          utcOffset: "+09:00"
-      # 3 배포용 패키지 경로 저장
-      - name: Set artifact
-        run: echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
-      # 4 빈스토크 배포
-      - name: Beanstalk Deploy
-        uses: einaregilsson/beanstalk-deploy@v20
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: springboot-developer
-          environment_name: springboot-developer-env
-          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
-          region: ap-northeast-2
-          deployment_package: ./build/libs/${{ env.artifact }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+          aws-region: ap-northeast-2
+
+      # 압축한 프로젝트를 S3로 전송합니다.
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
