--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,7 +31,9 @@ jobs:
 
       # build한 후 프로젝트를 압축합니다.
       - name: Make zip file
-        run: zip -r ./practice-deploy.zip .
+        run: |
+          cd consumptionplanner
+          zip -r ../practice-deploy.zip .
         shell: bash
 
       # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
