--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,10 +31,9 @@ jobs:
 
       # build한 후 프로젝트를 압축합니다.
       - name: Make zip file
-        run: |
-          cd consumptionplanner
-          zip -r ../practice-deploy.zip .
+        run: zip -r ./practice-deploy.zip ./consumptionplanner
         shell: bash
+
 
       # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
       # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
