--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,4 +49,8 @@ jobs:
 
       # 압축한 프로젝트를 S3로 전송합니다.
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+        run: >
+          aws deploy create-deployment --application-name consumptionplanner
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --deployment-group-name consumptionplanner-group
+          --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
