--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,46 +1,25 @@
-name: Java CI with Gradle
+# 1 워크플로의 이름 지정
+name: CI
 
+# 2 워크플로가 시작될 조건 지정
 on:
   push:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-
-env:
-  S3_BUCKET_NAME: dreamconsumer
+    branches: [ main ]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest # 3 실행 환경 지정
+    #4 실행스텝지정
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+
+      - uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: build
-
-      # build한 후 프로젝트를 압축합니다.
-      - name: Make zip file
-        run: zip -r ./practice-deploy.zip .
-        shell: bash
-
-      # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
-      # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
-          aws-region: ap-northeast-2
-
-      # 압축한 프로젝트를 S3로 전송합니다.
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+        run: ./gradlew clean build
