--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,8 @@ name: CI/CD # 1 깃허브 액션 이름 변경
 on:
   push:
     branches: [ main ]
-
+env:
+  S3_BUCKET_NAME: dreamconsumer
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,12 +36,13 @@ jobs:
         run: echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
 
       # 4 빈스토크 배포
-      - name: Beanstalk Deploy
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: springboot-developer
-        environment_name: springboot-developer-env
-        version_label: github-action-${{steps.current-time.outputs.formattedTime}} region: ap-northeast-2
-        deployment_package: ./build/libs/${{env.artifact}}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+          aws-region: ap-northeast-2
+
+      # 압축한 프로젝트를 S3로 전송합니다.
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
