--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,48 +1,25 @@
-name: CI/CD # 1 깃허브 액션 이름 변경
+# 1 워크플로의 이름 지정
+name: CI
 
+# 2 워크플로가 시작될 조건 지정
 on:
   push:
     branches: [ main ]
-env:
-  S3_BUCKET_NAME: dreamconsumer
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # 3 실행 환경 지정
+    #4 실행스텝지정
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: '11'
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-
       - name: Build with Gradle
         run: ./gradlew clean build
-
-      #2 현재시간가져오기
-      - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
-        id: current-time
-        with:
-          format: YYYY-MM-DDTHH-mm-ss
-          utcOffset: "+09:00"
-
-      # 3 배포용 패키지 경로 저장
-      - name: Set artifact
-        run: echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
-
-      # 4 빈스토크 배포
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
-          aws-region: ap-northeast-2
-
-      # 압축한 프로젝트를 S3로 전송합니다.
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
