--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,25 +1,46 @@
-# 1 워크플로의 이름 지정
-name: CI
+name: CI/CD # 1 깃허브 액션 이름 변경
 
-# 2 워크플로가 시작될 조건 지정
 on:
   push:
     branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest # 3 실행 환경 지정
-    #4 실행스텝지정
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: 'corretto'
           java-version: '11'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+
       - name: Build with Gradle
         run: ./gradlew clean build
+
+      #2 현재시간가져오기
+      - name: Get current time
+        uses: josStorer/get-current-time@v2.0.2
+        id: current-time
+        with:
+          format: YYYY-MM-DDTHH-mm-ss
+          utcOffset: "+09:00"
+
+      # 3 배포용 패키지 경로 저장
+      - name: Set artifact
+        run: echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
+
+      # 4 빈스토크 배포
+      - name: Beanstalk Deploy
+      uses: einaregilsson/beanstalk-deploy@v20
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: springboot-developer
+        environment_name: springboot-developer-env
+        version_label: github-action-${{steps.current-time.outputs.formattedTime}} region: ap-northeast-2
+        deployment_package: ./build/libs/${{env.artifact}}
