--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,46 +1,53 @@
-name: CI/CD # 1 깃허브 액션 이름 변경
+name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+
+env:
+  S3_BUCKET_NAME: dreamconsumer
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
-
-      - uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
           java-version: '11'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-
+          distribution: 'temurin'
       - name: Build with Gradle
-        run: ./gradlew clean build
-
-      #2 현재시간가져오기
-      - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
-        id: current-time
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          format: YYYY-MM-DDTHH-mm-ss
-          utcOffset: "+09:00"
+          arguments: build
 
-      # 3 배포용 패키지 경로 저장
-      - name: Set artifact
-        run: echo "artifact=$(ls ./build/libs)" >> $GITHUB_ENV
+      # build한 후 프로젝트를 압축합니다.
+      - name: Make zip file
+        run: zip -r ./practice-deploy.zip .
+        shell: bash
 
-      # 4 빈스토크 배포
-      - name: Beanstalk Deploy
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: springboot-developer
-        environment_name: springboot-developer-env
-        version_label: github-action-${{steps.current-time.outputs.formattedTime}} region: ap-northeast-2
-        deployment_package: ./build/libs/${{env.artifact}}
+      # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      # 압축한 프로젝트를 S3로 전송합니다.
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+
+      # CodeDeploy에게 배포 명령을 내립니다.
+      - name: Code Deploy
+        run: >
+          aws deploy create-deployment --application-name consumptionplanner
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --deployment-group-name consumptionplanner-group
+          --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
