--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Grant execute permission for gradlew
+        uses: gradle/C:\Users\user\IdeaProjects\consumptionplanner\gradlew
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
