--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,8 +2,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 permissions:
   contents: read
@@ -13,26 +12,27 @@ env:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up AdoptOpenJDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 11
+          distribution: 'adopt'
 
-      - name: Make gradlew executable
+      - name: Make Gradlew executable
         run: chmod +x gradlew
 
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Archive project
+      - name: Make zip file
         run: zip -r ./practice-deploy.zip .
-        shell: bash
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
