--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -16,49 +16,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up AdoptOpenJDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-          distribution: 'adopt'
+          java-version: '11'
+          distribution: 'temurin'
 
-      - name: Prepare
-        run: |
-          cd server # 서버 디렉토리로 이동
-          chmod +x prepare.sh # prepare.sh 파일에 실행 권한 부여
-          ./prepare.sh # prepare.sh 스크립트 실행
-        shell: bash
+      - name: Change directory to gradlew location
+        run: cd C:\Users\user\IdeaProjects\DreamConsumer\DreamConsumer\server\DreamConsumer-main
 
       - name: Build with Gradle
-        run: |
-          cd server # 서버 디렉토리로 이동
-          ./gradlew build # gradlew build 실행
+        run: ./gradlew build
 
+      # build한 후 프로젝트를 압축합니다.
       - name: Make zip file
-        run: |
-          cd server # 서버 디렉토리로 이동
-          zip -r ./practice-deploy.zip . # practice-deploy.zip 생성
+        run: zip -r ./practice-deploy.zip .
         shell: bash
 
+      # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
+      # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려옵니다.
           aws-region: ap-northeast-2
 
+      # 압축한 프로젝트를 S3로 전송합니다.
       - name: Upload to S3
-        run: |
-          cd server # 서버 디렉토리로 이동
-          aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
-
-      - name: Code Deploy
-        run: |
-          cd server # 서버 디렉토리로 이동
-          aws deploy create-deployment --application-name consumptionplanner
-          --deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name consumptionplanner-group
-          --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=practice-deploy.zip
+        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
