--- a/server/DreamConsumer-main/build.gradle
+++ b/server/DreamConsumer-main/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-	runtimeOnly 'com.h2datatbase:h2'
-	implementation 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
+//	implementation 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
