--- a/server/DreamConsumer-main/src/main/resources/mapper/application-local.yml
+++ b/server/DreamConsumer-main/src/main/resources/mapper/application-local.yml
@@ -3,4 +3,4 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://database-3.coocppqxryzy.ap-northeast-2.rds.amazonaws.com:3306/dream?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: database_dream
-    password: 123456798  # 실제 암호로 변경해야 합니다
+    password: ${{ secrets.AWS_DB_PASSWORD }}  # 실제 암호로 변경해야 합니다
