--- a/server/DreamConsumer-main/src/main/resources/application-dev.yml
+++ b/server/DreamConsumer-main/src/main/resources/application-dev.yml
@@ -23,3 +23,12 @@ spring:
 mail:
   address:
     admin: admin@gmail.com
+
+jwt:
+  key : ${JWT_SECRET_KEY}
+  access-token-expiration-minutes : 30
+  refresh-token-expiration-minutes : 420
+
+logging:
+  level:
+    org.springframework.security: DEBUG
