--- a/server/DreamConsumer-main/build.gradle
+++ b/server/DreamConsumer-main/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:3.11.2'
 	testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+	implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 tasks.named('test') {
