--- a/server/DreamConsumer-main/src/main/resources/application-server.yml
+++ b/server/DreamConsumer-main/src/main/resources/application-server.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://database-1.coocppqxryzy.ap-northeast-2.rds.amazonaws.com:3306/database-1?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: database-1
-    password: ${{ secrets.AWS_DB_PASSWORD }}  # 실제 암호로 변경해야 합니다
+    password: ${ secrets.AWS_DB_PASSWORD }  # 실제 암호로 변경해야 합니다
   jpa:
     hibernate:
       ddl-auto: validate
