--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,8 +2,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "
-qlek1108-patch-4" ]
+    branches: [ "qlek1108-patch-4" ]
 
 permissions:
   contents: read
