Fix : yml에 DB url 변경

--- a/server/DreamConsumer-main/src/main/resources/application-server.yml
+++ b/server/DreamConsumer-main/src/main/resources/application-server.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://database-2.coocppqxryzy.ap-northeast-2.rds.amazonaws.com:3306/database-2?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://dreamconsumer-db.c3r6azftukjh.ap-northeast-2.rds.amazonaws.com:3306/dreamconsumer?serverTimezone=Asia/Seoul
     username: admin
     password: ${{ secrets.JWT_SECRET_KEY }}  # 데이터베이스 암호로 변경해야 합니다
   jpa:
